Fixed login bug where user would get stuck in login when they type their credentials wrong + added indicators to show that user entered wrong info

--- a/src/Authentication/Login.module.css
+++ b/src/Authentication/Login.module.css
@@ -52,6 +52,10 @@
     border: 1px solid black;
 }
 
+.wrong-info {
+    border: 1px solid red;
+}
+
 .show-button {
     line-height: 1.5rem;
     vertical-align: middle;
